--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,64 +1,17 @@
 {
-  "cSpell.words": [
-    "adoc",
-    "aibitat",
-    "AIbitat",
-    "allm",
-    "anythingllm",
-    "Apipie",
-    "Astra",
-    "Chartable",
-    "cleancss",
-    "comkey",
-    "cooldown",
-    "cooldowns",
-    "datafile",
-    "Deduplicator",
-    "Dockerized",
-    "docpath",
-    "elevenlabs",
-    "Embeddable",
-    "epub",
-    "fireworksai",
-    "GROQ",
-    "hljs",
-    "huggingface",
-    "inferencing",
-    "koboldcpp",
-    "Langchain",
-    "lmstudio",
-    "localai",
-    "mbox",
-    "Milvus",
-    "Mintplex",
-    "mixtral",
-    "moderations",
-    "novita",
-    "numpages",
-    "Ollama",
-    "Oobabooga",
-    "openai",
-    "opendocument",
-    "openrouter",
-    "pagerender",
-    "ppio",
-    "Qdrant",
-    "royalblue",
-    "SearchApi",
-    "searxng",
-    "SerpApi",
-    "Serper",
-    "Serply",
-    "streamable",
-    "textgenwebui",
-    "togetherai",
-    "Unembed",
-    "uuidv",
-    "vectordbs",
-    "Weaviate",
-    "XAILLM",
-    "Zilliz"
-  ],
-  "eslint.experimental.useFlatConfig": true,
-  "docker.languageserver.formatter.ignoreMultilineInstructions": true
+  "files.exclude": {
+    "**/.git": true,
+    "**/.DS_Store": true,
+    "**/node_modules": true
+  },
+  "search.exclude": {
+    "**/node_modules": true,
+    "**/yarn.lock": true,
+    "**/package-lock.json": true
+  },
+  "files.associations": {
+    "*.sh": "shellscript"
+  },
+  "shellcheck.enable": true,
+  "terminal.integrated.defaultProfile.osx": "zsh"
 }
