--- a/package.json
+++ b/package.json
@@ -1,31 +1,37 @@
 {
-  "name": "anything-llm",
-  "version": "1.11.0",
-  "description": "The best solution for turning private documents into a chat bot using off-the-shelf tools and commercially viable AI technologies.",
+  "name": "agentos",
+  "version": "1.0.0",
+  "description": "Self-hosted, local-first AI-powered Desktop CRM with workflow automation. Integrates LLM, CRM, Analytics, and n8n workflows in a single desktop app.",
   "main": "index.js",
   "type": "module",
-  "author": "Timothy Carambat (Mintplex Labs)",
+  "author": "Roberto",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mintplex-labs/anything-llm.git"
+    "url": "git+https://github.com/Roberto-rgb-code/agentos.git"
   },
   "bugs": {
-    "url": "https://github.com/mintplex-labs/anything-llm/issues"
+    "url": "https://github.com/Roberto-rgb-code/agentos/issues"
   },
-  "homepage": "https://github.com/mintplex-labs/anything-llm#readme",
+  "homepage": "https://github.com/Roberto-rgb-code/agentos#readme",
   "engines": {
-    "node": ">=18"
+    "node": ">=20 <21",
+    "yarn": ">=1.22"
   },
   "scripts": {
     "test": "jest",
     "lint": "cd server && yarn lint && cd ../frontend && yarn lint && cd ../collector && yarn lint",
     "setup": "cd server && yarn && cd ../collector && yarn && cd ../frontend && yarn && cd .. && yarn setup:envs && yarn prisma:setup && echo \"Please run yarn dev:server, yarn dev:collector, and yarn dev:frontend in separate terminal tabs.\"",
     "setup:envs": "cp -n ./frontend/.env.example ./frontend/.env && cp -n ./server/.env.example ./server/.env.development && cp -n ./collector/.env.example ./collector/.env && cp -n ./docker/.env.example ./docker/.env && echo \"All ENV files copied!\n\"",
+    "dev:bootstrap": "bash scripts/dev_bootstrap.sh",
+    "dev:smoketest": "bash scripts/dev_smoketest.sh",
     "dev:server": "cd server && yarn dev",
     "dev:collector": "cd collector && yarn dev",
     "dev:frontend": "cd frontend && yarn dev",
+    "dev:electron": "cd electron && yarn dev",
+    "dev:desktop": "npx concurrently \"yarn dev:server\" \"yarn dev:frontend\" \"wait-on http://localhost:3000 && cd electron && yarn dev\"",
     "dev:all": "npx concurrently \"yarn dev:server\" \"yarn dev:frontend\" \"yarn dev:collector\"",
+    "build:desktop": "cd frontend && yarn build && cd ../electron && yarn build:mac",
     "prisma:generate": "cd server && npx prisma generate",
     "prisma:migrate": "cd server && npx prisma migrate dev --name init",
     "prisma:seed": "cd server && npx prisma db seed",
