feat: Complete CRM module - productos, agentes, seed data, pipeline comercial
- Added Productos page with catalog management (CRUD)
- Added Agentes IA page with AI agent configuration
- Updated sidebar navigation with all CRM links (accessible to basic users)
- Added routes for /crm/productos and /crm/agentes
- Updated Prisma schema with full CRM tables (conversaciones, agentes, productos, webhooks, historico)
- Created migration for CRM schema
- Added server models: agente, producto, conversacion, crmWebhook
- Updated CRM endpoints with full CRUD + webhook incoming endpoint for n8n
- Updated seed with sample data: 2 agents, 5 products, 5 leads, conversations, events
- Configured admin user (admin@local / admin123) with basic plan and full access
- Added seed step to Dockerfile.server for auto-seeding on container start

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -43,6 +43,8 @@ services:
       EMBEDDING_BASE_PATH: http://host.docker.internal:11434
       EMBEDDING_MODEL_PREF: nomic-embed-text
       STORAGE_DIR: /app/storage
+      SEED_ADMIN_EMAIL: admin
+      SEED_ADMIN_PASSWORD: admin123
     ports:
       - "3001:3001"
     volumes:
