--- a/docker/Dockerfile.server
+++ b/docker/Dockerfile.server
@@ -30,6 +30,6 @@ EXPOSE 3001
 HEALTHCHECK --interval=30s --timeout=10s --start-period=30s --retries=3 \
   CMD curl -f http://localhost:3001/api/ping || exit 1
 
-# Entrypoint: migrar DB y arrancar servidor
-CMD ["sh", "-c", "npx prisma migrate deploy --schema=./prisma/schema.prisma && node index.js"]
+# Entrypoint: migrar DB, seed, y arrancar servidor
+CMD ["sh", "-c", "npx prisma migrate deploy --schema=./prisma/schema.prisma && npx prisma db seed && node index.js"]
 
