--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -125,21 +125,13 @@ services:
     image: n8nio/n8n:latest
     container_name: agentos-n8n
     environment:
-      - N8N_BASIC_AUTH_ACTIVE=true
-      - N8N_BASIC_AUTH_USER=admin
-      - N8N_BASIC_AUTH_PASSWORD=admin
       - N8N_HOST=localhost
       - N8N_PORT=5678
       - N8N_PROTOCOL=http
       - WEBHOOK_URL=http://localhost:5678
       - NODE_FUNCTION_ALLOW_EXTERNAL=*
-      # Conectar n8n a la misma DB de Agentos
-      - DB_TYPE=postgresdb
-      - DB_POSTGRESDB_HOST=postgres
-      - DB_POSTGRESDB_PORT=5432
-      - DB_POSTGRESDB_DATABASE=agentos_dev
-      - DB_POSTGRESDB_USER=agentos
-      - DB_POSTGRESDB_PASSWORD=agentos
+      - N8N_SECURE_COOKIE=false
+      - N8N_PERSONALIZATION_ENABLED=false
     ports:
       - "5678:5678"
     volumes:
