feat: Electron app auto-starts Docker services on launch
- Modified main.js to check Docker and start services automatically
- Shows splash screen while services are starting
- Waits for services to be ready before opening main window
- Updated package.json build config
- Added instructions for building executable in README

--- a/electron/package.json
+++ b/electron/package.json
@@ -20,10 +20,14 @@
     },
     "files": [
       "main.js",
-      "../frontend/dist/**/*",
-      "../server/**/*",
-      "!../server/node_modules/**/*",
-      "!../server/__tests__/**/*"
+      "preload.js",
+      "../frontend/dist/**/*"
+    ],
+    "extraResources": [
+      {
+        "from": "../docker-compose.dev.yml",
+        "to": "docker-compose.dev.yml"
+      }
     ],
     "mac": {
       "category": "public.app-category.productivity",
