fix: auto-rename _index.html to index.html in frontend Dockerfile
- Added step to rename _index.html to index.html after build
- This fixes the blank screen issue in Electron app
- Frontend now loads correctly

--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -20,6 +20,9 @@ ENV VITE_API_BASE=/api
 # Build
 RUN yarn build
 
+# Renombrar _index.html a index.html (el build de Vite genera _index.html)
+RUN cd dist && if [ -f "_index.html" ]; then mv _index.html index.html; fi
+
 # ============================================
 # STAGE 2: Serve con nginx
 # ============================================
